@@ -1,5 +1,7 @@
 v0.12.0
 * Subscription to update the substitution list periodically from an URL.
+* Ability to use backslash-escaped characters in input (text and whole words) and output. Supported
+  characters are \\ (backslash), \n (new line), \r (carriage return) and \t (tab).
 * Removed compatibility with Firefox 1.5 and 2.
 * Compatibility with Firefox 3.5.
 * String changes:
